--- a/app/views/admin/balance_adjustments/new.html.erb
+++ b/app/views/admin/balance_adjustments/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Balance Adjustment</h1>
+<h1><%= t '.new_balance_1' %></h1>
 
 <%= render 'form', balance_adjustment: @balance_adjustment %>
 
-<%= link_to 'Back', admin_balance_adjustments_path %>
+<%= link_to (t '.back_1'), admin_balance_adjustments_path %>
