--- a/app/views/admin/platforms/index.html.erb
+++ b/app/views/admin/platforms/index.html.erb
@@ -1,11 +1,11 @@
-<h1>ADMIN / Platforms</h1>
+<h1><%= t '.admin' %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Platform</th>
-      <th>Hot wallet</th>
-      <th>Last scanned block</th>
+      <th><%= t '.platform' %></th>
+      <th><%= t '.hot_wallet' %></th>
+      <th><%= t '.last_scanned' %></th>
     </tr>
   </thead>
 
