--- a/app/views/admin/withdrawals/index.html.erb
+++ b/app/views/admin/withdrawals/index.html.erb
@@ -1,14 +1,14 @@
-<h1>ADMIN / Withdrawals</h1>
+<h1><%= t '.admin_1' %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Asset</th>
-      <th>Amount</th>
-      <th>Status</th>
-      <th>Transaction</th>
-      <th>Error</th>
+      <th><%= t '.user' %></th>
+      <th><%= t '.asset' %></th>
+      <th><%= t '.amount' %></th>
+      <th><%= t '.status' %></th>
+      <th><%= t '.transaction' %></th>
+      <th><%= t '.error' %></th>
     </tr>
   </thead>
 
