--- a/app/views/assets/show.html.erb
+++ b/app/views/assets/show.html.erb
@@ -3,4 +3,4 @@
 <p>
 <%= @asset.description %>
 </p>
-<%= link_to 'Edit', edit_asset_path(@asset), class: 'btn btn-primary'%>
+<%= link_to (t '.edit'), edit_asset_path(@asset), class: 'btn btn-primary'%>
