--- a/app/views/admin/balance_adjustments/index.html.erb
+++ b/app/views/admin/balance_adjustments/index.html.erb
@@ -1,16 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Balance Adjustments</h1>
+<h1><%= t '.balance' %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Asset</th>
-      <th>User</th>
-      <th>Change type</th>
-      <th>Change</th>
-      <th>Memo</th>
-      <th>Amount</th>
+      <th><%= t '.asset_2' %></th>
+      <th><%= t '.user_1' %></th>
+      <th><%= t '.change_type' %></th>
+      <th><%= t '.change' %></th>
+      <th><%= t '.memo' %></th>
+      <th><%= t '.amount_1' %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,7 +24,7 @@
         <td><%= balance_adjustment.change_id %></td>
         <td><%= balance_adjustment.memo %></td>
         <td><%= balance_adjustment.amount %></td>
-        <td><%= link_to 'Show', admin_balance_adjustment_path(balance_adjustment) %></td>
+        <td><%= link_to (t '.show'), admin_balance_adjustment_path(balance_adjustment) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Balance Adjustment', new_admin_balance_adjustment_path %>
+<%= link_to (t '.new_balance'), new_admin_balance_adjustment_path %>
