--- a/app/views/authorization_codes/_form.html.erb
+++ b/app/views/authorization_codes/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: authorization_code, local: true) do |form| %>
   <% if authorization_code.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(authorization_code.errors.count, "error") %> prohibited this authorization_code from being saved:</h2>
+      <h2><%= t '.prohibited_2', :authorization => (pluralize(authorization_code.errors.count, "error") ) %></h2>
       <ul>
         <% authorization_code.errors.full_messages.each do |message| %>
           <li><%= message %></li>
