--- a/app/views/authorization_codes/new.html.erb
+++ b/app/views/authorization_codes/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Please enter your email address</h1>
-<p>We will send you a private link to your dashboard.</p>
+<h1><%= t '.please_enter' %></h1>
+<p><%= t '.we_will_send' %></p>
 <%= render 'form', authorization_code: @authorization_code %>
