--- a/app/views/balance_adjustments/index.html.erb
+++ b/app/views/balance_adjustments/index.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Account History</h1>
+<h1><%= t '.account_1' %></h1>
 
 <table>
   <thead>
     <tr>
-      <th>Asset</th>
-      <th>Change type</th>
-      <th>Memo</th>
-      <th>Amount</th>
+      <th><%= t '.asset_4' %></th>
+      <th><%= t '.change_type_1' %></th>
+      <th><%= t '.memo_1' %></th>
+      <th><%= t '.amount_3' %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,7 +20,7 @@
         <td><%= balance_adjustment.change_type %></td>
         <td><%= balance_adjustment.memo %></td>
         <td><%= balance_adjustment.amount %></td>
-        <td><%= link_to 'Check transaction', balance_adjustment.transaction_url, target: '_blank' if balance_adjustment.transaction_url %></td>
+        <td><%= link_to (t '.check'), balance_adjustment.transaction_url, target: '_blank' if balance_adjustment.transaction_url %></td>
       </tr>
     <% end %>
   </tbody>
