--- a/app/views/deposits/new.html.erb
+++ b/app/views/deposits/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Deposit <%= @asset.name %></h1>
-<p>Please deposit <%= @asset.symbol %> to <%= @address.address %></p>
+<h1><%= t '.deposit', :asset_name => (@asset.name) %></h1>
+<p><%= t '.please_deposit', :asset_symbol => (@asset.symbol), :address => (@address.address) %></p>
 
 <%= image_tag "https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=#{@address.address}&choe=UTF-8" %>
