--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: order, local: true) do |form| %>
   <% if order.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
+      <h2><%= t '.prohibited_3', :order_errors => (pluralize(order.errors.count, "error") ) %></h2>
 
       <ul>
       <% order.errors.full_messages.each do |message| %>
