--- a/app/views/withdrawals/new.html.erb
+++ b/app/views/withdrawals/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Withdrawal</h1>
+<h1><%= t '.new_withdrawal_1' %></h1>
 
 <%= render 'form', withdrawal: @withdrawal %>
 
-<%= link_to 'Back', withdrawals_path %>
+<%= link_to (t '.back_3'), withdrawals_path %>
