--- a/app/views/pages/link_sent.html.haml
+++ b/app/views/pages/link_sent.html.haml
@@ -1,9 +1,6 @@
-%div
-	.alert.alert-success
-		%h1 
-			.alert-heading Well done!!
-		%p We have sent you an email!
-		%hr
-		%p
-			.mb-0 Please open your email application and click on the link to login.
+.alert.alert-success
+	%h1 
+		.alert-heading Link sent
+	%p
+		.mb-0 Please open your email application and click on the link to login.
  
