--- a/app/views/assets/show.html.erb
+++ b/app/views/assets/show.html.erb
@@ -3,4 +3,6 @@
 <p>
 <%= @asset.description %>
 </p>
-<%= link_to (t '.edit'), edit_asset_path(@asset), class: 'btn btn-primary'%>
+<% if @asset.managable_by?(current_user) %>
+  <%= link_to (t '.edit'), edit_asset_path(@asset), class: 'btn btn-primary'%>
+<% end %>
