fix admin role, nicer alerts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,11 +66,11 @@
     <div class="container">
     
       <% if notice %>
-        <%= notice %>
+        <div class="alert alert-success"><%= notice %></div>
       <% end %>
 
       <% if alert %>
-        <%= alert %>
+        <div class="alert alert-warning"><%= alert %></div>
       <% end %>
 
       <%= yield %>
