prepare for rebranding

--- a/app/views/user_mailer/airdrop.text.erb
+++ b/app/views/user_mailer/airdrop.text.erb
@@ -1,10 +1,10 @@
 Hello,
 
-you have received an airdrop into your NewArt Technology account:
+you have received an airdrop into your <%= t 'app_name' %> account:
 
 Asset: <%= @adjustment.asset.name %> (<%= @adjustment.asset.symbol %>)
 Amount: <%= @adjustment.amount %>
 
 Please vist <%= login_url %> to access your funds.
 
-Thank you for using NewArt Technology.
+Thank you for using <%= t 'app_name' %>.
