--- a/app/views/user_mailer/deposit_email.text.erb
+++ b/app/views/user_mailer/deposit_email.text.erb
@@ -2,4 +2,4 @@ Dear costumer,
 
 <%= @deposit.amount %> <%= @deposit.asset.name %> have been deposited into your account.
 
-Thank you for using NewArt Technology.
+Thank you for using <%= t 'app_name' %>.
