--- a/app/views/user_mailer/withdrawal_submitted_email.text.erb
+++ b/app/views/user_mailer/withdrawal_submitted_email.text.erb
@@ -8,4 +8,4 @@ Amount: <%= @withdrawal.amount %>
 You can view the status of the transfer here:
 <%= @withdrawal.transaction_url %>
 
-Thank you for trading with NewArt Technology
+Thank you for trading with <%= t 'app_name' %>.
