fix order tests

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <%= form.hidden_field :quote_asset_id, value: Asset::ETH.id %>
+  <%= form.hidden_field :quote_asset_id, value: Asset.eth.id %>
 
   <div class="field">
     <%= form.label :side %>
