layout tweaks, attach logo & whitepaper to assets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,13 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosansjapanese.css);
 @import "bootstrap";
-@import 'scaffolds';
-
+@import "*";
 
 html {
   font-size: 14px;
+}
+
+body {
+  font-family: Noto Sans Japanese,Lucida Grande,Tahoma,Verdana,sans-serif;
 }
 
 @media (min-width: 768px) {
