--- a/app/views/assets/new.html.haml
+++ b/app/views/assets/new.html.haml
@@ -1,3 +1,4 @@
-%h1 Submit new Contract
-%p Please submit the details of the deployed token
-= render 'form'
+.container
+  %h1 Submit new Contract
+  %p Please submit the details of the deployed token
+  = render 'form'
