--- a/app/assets/stylesheets/assets.scss
+++ b/app/assets/stylesheets/assets.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the assets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.asset_top_wrapper {
+  padding: 80px 0;
+  text-align: center;
+  .hero_well {
+    background: rgba(255, 255, 255, 0.8);
+    padding: 60px;
+    .logo {
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 12px;
+    }
+    .name {
+      vertical-align: middle;
+      display: inline-block;
+      font-weight: 100;
+      font-size: 58px;
+    }
+  }
+  .buttons {
+    margin-top: 48px;
+  }
+}
+.asset_description_wrapper {
+  text-align: center;
+}
