--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -1,17 +1,19 @@
-%h1= t '.contact_1'
-%p= t '.feel_free_to'
-%table.table
-  %tr
-    %td= t '.address'
-    %td
-      〒102-0084
-      %br>/
-      千代田区二番町3-10-3#{t '.f'}
-      %br/
-      %a{:href => "https://www.google.com/maps/search/〒102-0084+千代田区二番町3-10", :target => "_blank"}= t '.google_maps'
-  %tr
-    %td= t '.phone'
-    %td 03-6825-6305
-  %tr
-    %td= t '.fax'
-    %td 03-6261-0389
+.container
+  %h1= t '.contact_1'
+  %p= t '.feel_free_to'
+  %table.table
+    %tr
+      %td= t '.address'
+      %td
+        〒102-0084
+        %br>/
+        千代田区二番町3-10-3#{t '.f'}
+        %br/
+        %a{:href => "https://www.google.com/maps/search/〒102-0084+千代田区二番町3-10", :target => "_blank"}= t '.google_maps'
+    %tr
+      %td= t '.phone'
+      %td 03-6825-6305
+    %tr
+      %td= t '.fax'
+      %td 03-6261-0389
+    
