--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -1,18 +1,19 @@
 .container
-  .px-3.py-3.pt-md-5.pb-md-4.mx-auto.text-center
+  .py-3.pt-md-5.pb-md-4.mx-auto.text-center
     %h1.display-4= t '.welcome_to'
     %p.lead= t '.introducing'
     = t '.create_token_1_html', :link_to_submit => (link_to (t '.submit'), new_asset_path)
-  .px-3.py-3.pt-md-5.pb-md-4.mx-auto
+  .py-3.pt-md-5.pb-md-4.mx-auto
     %h1.display-4.text-center= t '.featured'
-    .card-deck
+    .card-deck.mb-5
       - for asset in @featured_assets
         .card.asset(style="background-position:center;background-size:cover;background-image:url('#{url_for asset.background if asset.background.attached?}')")
           .card-logo= image_tag(url_for asset.logo) if asset.logo.attached?
           .card-body
             %h5.card-title= asset.name
             %p.card-text.text-justify= asset.description
+          .card-footer
             %p
-              = link_to (t '.view_details'), asset, class: 'btn btn-primary'
+              = link_to (t '.view_details'), asset, class: 'btn btn-block btn-primary'
     .text-center
       %a.btn.btn-lg.btn-outline-primary{:href => "/assets"}= t '.browse_all'
