more layout tweaks, store website and brand color on asset

--- a/app/views/assets/new.html.haml
+++ b/app/views/assets/new.html.haml
@@ -1,4 +1,6 @@
 .container
-  %h1 Submit new Contract
-  %p Please submit the details of the deployed token
-  = render 'form'
+  %h1.mt-5 Submit new Token
+  .card
+    .card-body
+      %p Please enter the details of the deployed token
+      = render 'form'
