--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,30 +17,31 @@
       - if current_user
         balances: #{raw current_user.cached_balances_json}
       }
-    = javascript_pack_tag 'app', integrity: true
   %body{class: params[:controller]}
+    = javascript_pack_tag 'app', integrity: true if @serve_webpack_app
     - if current_user.try(:admin?)
-      .admin
-        Admin Menu: #{link_to 'Platforms', admin_platforms_path} | #{link_to 'Withdrawals', admin_withdrawals_path} | #{link_to 'Assets', admin_assets_path}
-    .d-flex.flex-column.flex-md-row.align-items-center.p-3.px-md-4.bg-white.border-bottom.shadow-sm
-      %h5.my-0.mr-md-auto.font-weight-normal
-        = image_tag 'logo.png', width: 24, height: 24
-        = link_to t('app_name'), root_path
-      .dropdown
-        %button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :type => "button"}
+      %nav.navbar.navbar-dark.bg-dark.fixed-bottom.navbar-expand-lg
+        .nav-item Admin Menu 
+        .nav-item= link_to 'Platforms', admin_platforms_path
+        .nav-item= link_to 'Withdrawals', admin_withdrawals_path
+        .nav-item= link_to 'Assets', admin_assets_path
+    %nav.navbar.sticky-top.navbar-light.bg-white.border-bottom.navbar-expand-lg
+      = link_to image_tag('logo_name.png', height: 19), root_path, class: 'navbar-brand mr-auto'
+      
+      - if current_user
+        .nav-item= "Logged in as #{current_user.email}"
+        .nav-item= link_to 'My Balances', '/balances', class: 'p-2 text-dark'
+        .nav-item= link_to 'Account History', '/balance_adjustments', class: 'p-2 text-dark'
+        .nav-item= link_to 'Log Out', logout_path, method: :delete, class: 'p-2 text-dark'
+      - else
+        / not logged in
+        .nav-item= link_to (t '.log_in'), login_path
+      .dropdown.nav-item
+        %a#dropdownMenuButton.nav-link.dropdown-toggle{"href" => "#", "aria-haspopup" => "true", "data-toggle" => "dropdown"}
           = I18n.locale
-        .dropdown-menu{"aria-labelledby" => "dropdownMenuButton"}
+        .dropdown-menu.dropdown-menu-right{"aria-labelledby" => "dropdownMenuButton"}
           = link_to (t '.english'), {locale: 'en'}, class: 'dropdown-item'
           = link_to (t '.japanese'), {locale: 'ja'}, class: 'dropdown-item'
-      %nav.my-2.my-md-0.mr-md-3
-        - if current_user
-          = "Logged in as #{current_user.email}"
-          = link_to 'My Balances', '/balances', class: 'p-2 text-dark'
-          = link_to 'Account History', '/balance_adjustments', class: 'p-2 text-dark'
-          = link_to 'Log Out', logout_path, method: :delete, class: 'p-2 text-dark'
-        - else
-          / not logged in
-          = link_to (t '.log_in'), login_path
     .container
       - if notice
         .alert.alert-success= notice
