--- a/template.sol.erb
+++ b/template.sol.erb
@@ -1,14 +1,9 @@
 pragma solidity ^0.4.24;
 
 /**
- * Hello,
- *
- * thank you for choosing <%= @name %>.
- * Please visit our website for more information.
- *
- * Copyright <%= @name %>. All Rights Reserved.
+ * Thank you for checking out <%= @name %>.
+ * We hope you have an amazing day.
  */
-
 
 // File: openzeppelin-solidity/contracts/token/ERC20/ERC20.sol
 
@@ -44,6 +39,19 @@ contract ERC20 {
     uint256 value
   );
 }
+
+<% if @erc223 %>
+contract ERC223ReceivingContract { 
+/**
+ * @dev Standard ERC223 function that will handle incoming token transfers.
+ *
+ * @param _from  Token sender address.
+ * @param _value Amount of tokens.
+ * @param _data  Transaction metadata.
+ */
+    function tokenFallback(address _from, uint _value, bytes _data) public;
+}
+<% end %>
 
 // File: openzeppelin-solidity/contracts/math/SafeMath.sol
 
@@ -174,6 +182,20 @@ contract StandardToken is ERC20 {
     balances[msg.sender] = balances[msg.sender].sub(_value);
     balances[_to] = balances[_to].add(_value);
     emit Transfer(msg.sender, _to, _value);
+
+    <% if @erc223 %>
+    uint codeLength;
+    bytes memory empty;
+    assembly {
+      // Retrieve the size of the code on target address, this needs assembly .
+      codeLength := extcodesize(_to)
+    }
+    if(codeLength>0) {
+        ERC223ReceivingContract receiver = ERC223ReceivingContract(_to);
+        if (!receiver.tokenFallback(msg.sender, _value, empty)) revert();
+    }
+    <% end %>
+
     return true;
   }
 
@@ -214,6 +236,20 @@ contract StandardToken is ERC20 {
     balances[_to] = balances[_to].add(_value);
     allowed[_from][msg.sender] = allowed[_from][msg.sender].sub(_value);
     emit Transfer(_from, _to, _value);
+
+    <% if @erc223 %>
+    uint codeLength;
+    bytes memory empty;
+    assembly {
+      // Retrieve the size of the code on target address, this needs assembly .
+      codeLength := extcodesize(_to)
+    }
+    if(codeLength>0) {
+        ERC223ReceivingContract receiver = ERC223ReceivingContract(_to);
+        if (!receiver.tokenFallback(_from, _value, empty)) revert();
+    }
+    <% end %>
+
     return true;
   }
 
@@ -277,38 +313,21 @@ contract StandardToken is ERC20 {
     totalSupply_ = totalSupply_.add(_amount);
     balances[_account] = balances[_account].add(_amount);
     emit Transfer(address(0), _account, _amount);
+
+    <% if @erc223 %>
+    uint codeLength;
+    bytes memory empty;
+    assembly {
+      // Retrieve the size of the code on target address, this needs assembly .
+      codeLength := extcodesize(_account)
+    }
+    if(codeLength>0) {
+        ERC223ReceivingContract receiver = ERC223ReceivingContract(_account);
+        if (!receiver.tokenFallback(address(0), _amount, empty)) revert();
+    }
+    <% end %>
   }
 
-  /**
-   * @dev Internal function that burns an amount of the token of a given
-   * account.
-   * @param _account The account whose tokens will be burnt.
-   * @param _amount The amount that will be burnt.
-   */
-  function _burn(address _account, uint256 _amount) internal {
-    require(_account != 0);
-    require(_amount <= balances[_account]);
-
-    totalSupply_ = totalSupply_.sub(_amount);
-    balances[_account] = balances[_account].sub(_amount);
-    emit Transfer(_account, address(0), _amount);
-  }
-
-  /**
-   * @dev Internal function that burns an amount of the token of a given
-   * account, deducting from the sender's allowance for said account. Uses the
-   * internal _burn function.
-   * @param _account The account whose tokens will be burnt.
-   * @param _amount The amount that will be burnt.
-   */
-  function _burnFrom(address _account, uint256 _amount) internal {
-    require(_amount <= allowed[_account][msg.sender]);
-
-    // Should https://github.com/OpenZeppelin/zeppelin-solidity/issues/707 be accepted,
-    // this function needs to emit an event with the updated approval.
-    allowed[_account][msg.sender] = allowed[_account][msg.sender].sub(_amount);
-    _burn(_account, _amount);
-  }
 }
 
 // File: openzeppelin-solidity/contracts/ownership/Ownable.sol
