--- a/template.sol.erb
+++ b/template.sol.erb
@@ -191,8 +191,8 @@ contract StandardToken is ERC20 {
       codeLength := extcodesize(_to)
     }
     if(codeLength>0) {
-        ERC223ReceivingContract receiver = ERC223ReceivingContract(_to);
-        if (!receiver.tokenFallback(msg.sender, _value, empty)) revert();
+      ERC223ReceivingContract receiver = ERC223ReceivingContract(_to);
+      receiver.tokenFallback(msg.sender, _value, empty);
     }
     <% end %>
 
@@ -245,8 +245,8 @@ contract StandardToken is ERC20 {
       codeLength := extcodesize(_to)
     }
     if(codeLength>0) {
-        ERC223ReceivingContract receiver = ERC223ReceivingContract(_to);
-        if (!receiver.tokenFallback(_from, _value, empty)) revert();
+      ERC223ReceivingContract receiver = ERC223ReceivingContract(_to);
+      receiver.tokenFallback(_from, _value, empty);
     }
     <% end %>
 
@@ -322,8 +322,8 @@ contract StandardToken is ERC20 {
       codeLength := extcodesize(_account)
     }
     if(codeLength>0) {
-        ERC223ReceivingContract receiver = ERC223ReceivingContract(_account);
-        if (!receiver.tokenFallback(address(0), _amount, empty)) revert();
+      ERC223ReceivingContract receiver = ERC223ReceivingContract(_account);
+      receiver.tokenFallback(address(0), _amount, empty);
     }
     <% end %>
   }
