--- a/app/views/assets/show.html.haml
+++ b/app/views/assets/show.html.haml
@@ -15,9 +15,12 @@
         .btn.btn-primary.btn-lg Whitepaper coming soon
       = link_to (t '.buy_now'), '#', class: 'btn btn-primary btn-lg'
 .container.asset_page_content
-  - for content in @asset.page_content
-    .page_content.pt-5.pb-5
-      = raw content['html']
+  - if @asset.page_content
+    - for content in @asset.page_content
+      .page_content.pt-5.pb-5
+        = raw content['html']
+  - else
+    .page_content.pt-5.pb-5= t '.no_info_available'
 .container
   - if @asset.managable_by?(current_user)
     = link_to (t '.edit'), edit_asset_path(@asset), class: 'btn btn-primary'
