--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -61,6 +61,7 @@
             = t '.deposits', :status_first => (Status.first.last_deposits_ran_at > 2.minutes.ago ? 'OK' : 'Stopped')
             = t '.withdrawals_1', :status_first => (Status.first.last_withdrawals_ran_at > 2.minutes.ago ? 'OK' : 'Stopped')
 
+// XXX: move code into a bundled javascipt file
 = javascript_include_tag '/redactor/redactor.min.js'
 = javascript_include_tag '/redactor/_plugins/alignment/alignment.min.js'
 = javascript_include_tag '/redactor/_plugins/imagemanager/imagemanager.min.js'
