--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,9 @@ body {
   max-width: 960px;
 }
 
-.home-header {
-  max-width: 700px;
+section.hero {
+  padding-top: 200px;
+  padding-bottom: 160px;
 }
 
 .card-deck .card {
