--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,9 @@
 body {
   font-family: Noto Sans Japanese,Lucida Grande,Tahoma,Verdana,sans-serif;
   font-size: 16px;
+  background: asset_url('bg.png');
+  background-position: 100% 0;
+  background-size: cover;
 }
 
 @media (min-width: 768px) {
