fix airdrops of native assets

--- a/app/views/airdrops/new.html.haml
+++ b/app/views/airdrops/new.html.haml
@@ -1,6 +1,6 @@
 .container
-  %h1 New #{@airdrop.asset.symbol} Airdrop
-
+  %h1 #{@airdrop.asset.symbol} Airdrop
+  %p Send assets to multiple users
   .card-deck.mb-3
     .card
       .card-body
@@ -27,7 +27,7 @@
       = f.text_area :amounts, class: 'form-control', placeholder: 'address@example.com 200'
     .form-group
       %label Memo
-      = f.text_field :memo, class: 'form-control', placeholder: "eg.: Thank you for your interest in #{@airdrop.asset.name}"
+      = f.text_field :memo, class: 'form-control', placeholder: "Enter a message"
       %small.form-text.text-muted This will be visible for the recipient
     %button.btn.btn-primary Save & Execute
     %span.text-muted Please note that this will send an email to every recipient.
