--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,10 +1,17 @@
 !!!
 %html
   %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
+    %meta{content: "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     %title= t 'app_name'
-    %meta{:charset => "utf-8"}
-    %meta{:content => "width=device-width, initial-scale=1, shrink-to-fit=no", :name => "viewport"}
+    %meta{charset: "utf-8"}
+    %meta{content: "width=device-width, initial-scale=1, shrink-to-fit=no", name: "viewport"}
+    %link{href: "/apple-touch-icon.png", rel: "apple-touch-icon", sizes: "76x76"}
+    %link{href: "/favicon-32x32.png", rel: "icon", sizes: "32x32", type: "image/png"}
+    %link{href: "/favicon-16x16.png", rel: "icon", sizes: "16x16", type: "image/png"}
+    %link{href: "/site.webmanifest", rel: "manifest"}
+    %link{color: "#bb0000", href: "/safari-pinned-tab.svg", rel: "mask-icon"}
+    %meta{content: "#bb0000", name: "msapplication-TileColor"}
+    %meta{content: "#ffffff", name: "theme-color"}
     - if @no_cache
       %meta(name="turbolinks-cache-control" content="no-cache")
     = csrf_meta_tags
@@ -19,7 +26,7 @@
       }
     = javascript_pack_tag 'app', integrity: true
     = javascript_include_tag 'application', integrity: true
-    
+
     = stylesheet_link_tag    'application', media: 'all'
   %body{class: params[:controller]}
     - if current_user.try(:admin?)
